# Not-VLC

./: .gitignore  CMakeLists.txt  README.md  main.c
audio/: audio.c  audio.h
decoders/: decoder.c  decoder.h  video_decoder.c  video_decoder.h
display/: player.c  player.h
libs/microlog/: microlog.c
player/: player.c  player.h
utils/: packet_queue.c  packet_queue.h  sync.c  sync.h
video/: video.c  video.h
